generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
}

// ─── Institutions ────────────────────────────────────────────────────────────

model University {
  id           String   @id @default(cuid())
  oid          String   @unique
  name         String
  description  String?
  logoUrl      String?
  type         String // "yo" | "amk" | "amm"
  municipality String?
  website      String?
  email        String?
  studentCount Int?
  syncedAt     DateTime
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  programs  ProgramUniversity[]
  locations UniversityLocation[]

  usersSaved UserUniversity[]

  @@index([type])
  @@index([syncedAt])
}

model UniversityLocation {
  id           String     @id @default(cuid())
  universityId String
  university   University @relation(fields: [universityId], references: [id], onDelete: Cascade)
  code         String // kunta_091
  name         String // Helsinki

  @@unique([universityId, code])
}

// ─── Programmes ──────────────────────────────────────────────────────────────

model Program {
  id              String   @id @default(cuid())
  oid             String   @unique
  name            String
  description     String?
  type            String // "yo" | "amk" | "amm"
  typePath        String? // "kk/yo"
  isDegree        Boolean  @default(false)
  imageUrl        String?
  creditsAmount   Float?
  creditsUnit     String? // "ECTS credits"
  eqfLevel        String? // "eqf_8"
  nqfLevel        String? // "nqf_8"
  fieldOfStudy    String? // first koulutusala name (English)
  degreeTitles    String[] // tutkintonimike names (English)
  implementations Json? // raw toteutukset array stored as-is
  syncedAt        DateTime
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  universities ProgramUniversity[]
  userPrograms UserProgram[]
  mockTests    MockTest[]

  @@index([type])
  @@index([isDegree])
  @@index([syncedAt])
}

// Many-to-many join table
model ProgramUniversity {
  programId    String
  universityId String
  program      Program    @relation(fields: [programId], references: [id], onDelete: Cascade)
  university   University @relation(fields: [universityId], references: [id], onDelete: Cascade)

  @@id([programId, universityId])
}

// ─── Users & Auth ────────────────────────────────────────────────────────────

model User {
  id              String    @id @default(cuid())
  email           String    @unique
  passwordHash    String
  firstName       String?
  lastName        String?
  emailVerifiedAt DateTime?
  createdAt       DateTime  @default(now())
  updatedAt       DateTime  @updatedAt

  auth              Auth?
  mockTests         MockTest[]
  savedPrograms     UserProgram[]
  savedUniversities UserUniversity[]
}

model Auth {
  id           String   @id @default(cuid())
  userId       String   @unique
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  refreshToken String
  createdAt    DateTime @default(now())
  expiresAt    DateTime
}

// ─── User Saved Items ─────────────────────────────────────────────────────────

model UserProgram {
  id        String   @id @default(cuid())
  userId    String
  programId String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  program   Program  @relation(fields: [programId], references: [id], onDelete: Cascade)
  status    String?
  createdAt DateTime @default(now())

  @@unique([userId, programId])
}

model UserUniversity {
  id           String     @id @default(cuid())
  userId       String
  universityId String
  user         User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  university   University @relation(fields: [universityId], references: [id], onDelete: Cascade)
  notes        String?
  createdAt    DateTime   @default(now())

  @@unique([userId, universityId])
}

// ─── Mock Tests ───────────────────────────────────────────────────────────────

model MockTest {
  id               String    @id @default(cuid())
  userId           String
  programId        String
  user             User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  program          Program   @relation(fields: [programId], references: [id], onDelete: Cascade)
  score            Int?
  maxScore         Int?
  timeTakenMinutes Int?
  status           String
  completedAt      DateTime?
  createdAt        DateTime  @default(now())
}
